--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -13,6 +13,8 @@
 	<string name="swapwarning">You must have an external SD card with a swap partition (Recovery > Format swap+fat32)</string>
 	<string name="defaults">Defaults successfully loaded. Press Apply new config to save.</string>
 	<string name="done">Done</string>
+	<string name="flash">Flashing kernel...</string>
+	<string name="download">Downloading kernel...</string>
 	<!-- Menu -->
 	<string name="about">About</string>
 	<string name="exit">Exit</string>
